# matsuzawa-20260227

./: package-lock.json  pyproject.toml
.claude/: settings.json
.github/actions/run-claude-code/: action.yml
.github/workflows/: compile_latex.yml  run_code_generator.yml  run_diagram_generator.yml  run_experiment_validator.yml
.research/: research_history.json
.research/latex/mdpi/: main.tex  references.bib
.research/results/: stderr.txt  stdout.txt
.research/results/comparative-0-gsm8k/: metrics.json
.research/results/comparative-1-gsm8k/: metrics.json
.research/results/comparative-2-gsm8k/: metrics.json
.research/results/comparison/: aggregated_metrics.json
.research/results/proposed-gsm8k/: metrics.json
config/: config.yaml
config/run/: comparative-0-gsm8k.yaml  comparative-1-gsm8k.yaml  comparative-2-gsm8k.yaml  proposed-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py
